query+swagger fix
