# docs/swagger.json
@@ -21,6 +21,44 @@
                 ],
                 "summary": "Get products from cart",
                 "operationId": "get-products-from-cart",
+                "parameters": [
+                    {
+                        "enum": [
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "sort by",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "sort order",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            10,
+                            25,
+                            50
+                        ],
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -388,7 +426,7 @@
                 }
             }
         },
-        "/api/order/{productId}": {
+        "/api/order/{orderId}": {
             "get": {
                 "security": [
                     {
@@ -404,9 +442,47 @@
                     {
                         "type": "integer",
                         "description": "ID of order to get",
-                        "name": "productId",
+                        "name": "orderId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "enum": [
+                            "views",
+                            "price",
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "sort by",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "sort order",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            10,
+                            25,
+                            50
+                        ],
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -455,6 +531,44 @@
                 ],
                 "summary": "Get orders",
                 "operationId": "get-orders",
+                "parameters": [
+                    {
+                        "enum": [
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "sort by",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "sort order",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            10,
+                            25,
+                            50
+                        ],
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -601,6 +715,42 @@
                         "name": "productId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "enum": [
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "sort by",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "sort order",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            10,
+                            25,
+                            50
+                        ],
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
